--- a/test/browser-test.html
+++ b/test/browser-test.html
@@ -15,35 +15,35 @@
 
 	<script>
 
-	//pinki.fulfillVow('aaa', 'fulA');
-	//pinki.breakVow('aaa', 'broken');
+	//pinki.vow.fulfill('aaa', 'fulA');
+	//pinki.vow.break('aaa', 'broken');
 
-	pinki.fulfillVow('ccc', 'fulC');
-	//pinki.breakVow('ccc', 'breakC');
+	pinki.vow.fulfill('ccc', 'fulC');
+	//pinki.vow.break('ccc', 'breakC');
 
 
-	pinki.whenVows('aaa', 'bbb').then((data) => {
+	pinki.vow.when('aaa', 'bbb').then((data) => {
 		console.log(`aaabbb - ${data.aaa} - ${data.bbb}`);
 	},(data) => {
 		console.log(`aaabbb - ${data}`);
 	});
 
 
-	pinki.whenVows('aaa', 'bbb').then((data) => {
+	pinki.vow.when('aaa', 'bbb').then((data) => {
 		console.log(`aaabbb2 - ${data.aaa} - ${data.bbb}`);
 	},(data) => {
 		console.log(`aaabbb2 - ${data}`);
 	});
 
 
-	pinki.whenVows('bbb', 'ccc').then((data) => {
+	pinki.vow.when('bbb', 'ccc').then((data) => {
 		console.log(`bbbccc - ${data.bbb} - ${data.ccc}`);
 	},(data) => {
 		console.log(`bbbccc - ${data}`);
 	});
 
 
-	pinki.whenVows('ccc').then((data) => {
+	pinki.vow.when('ccc').then((data) => {
 		console.log(`ccc - ${data.ccc}`);
 	},(data) => {
 		console.log(`ccc - ${data}`);
@@ -53,21 +53,21 @@
 
 
 	//setTimeout(() => {
-	//	pinki.fulfillVow('ccc', 'fulC');
+	//	pinki.vow.fulfill('ccc', 'fulC');
 	//}, 2000);
 
 	setTimeout(() => {
-		pinki.fulfillVow('aaa', 'fulA');
+		pinki.vow.fulfill('aaa', 'fulA');
 	}, 3000);
 
 	setTimeout(() => {
-		pinki.fulfillVow('bbb', 'fulB');
+		pinki.vow.fulfill('bbb', 'fulB');
 	}, 4000);
 
 
 
 	setTimeout(() => {
-		pinki.whenVows('aaa', 'ccc').then((data) => {
+		pinki.vow.when('aaa', 'ccc').then((data) => {
 			console.log(`aaaccc - ${data.aaa} - ${data.ccc}`);
 		},(data) => {
 			console.log(`aaaccc - ${data}`);
