Conversion to webpack build

--- a/test/browser-test.html
+++ b/test/browser-test.html
@@ -7,7 +7,7 @@
 
 	<script src="../bower_components/pubsub-js/src/pubsub.js"></script>
 	<script src="../vendor/rsvp.js"></script>
-	<script src="../index.js"></script>
+	<script src="../dist/web-es5.js"></script>
 
 	<!-- (c) 2011-2018 Absolunet -->
 </head>
