--- a/test/browser-test.html
+++ b/test/browser-test.html
@@ -5,15 +5,13 @@
 
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 
-	<script src="../bower_components/pubsub-js/src/pubsub.js"></script>
-	<script src="../vendor/rsvp.js"></script>
-	<script src="../dist/web-es5.js"></script>
-
-	<!-- (c) 2011-2018 Absolunet -->
-</head>
-<body>
+	<script src="../node_modules/pubsub-js/src/pubsub.js"></script>
+	<script src="../node_modules/rsvp/dist/rsvp.js"></script>
+	<script src="../dist/browser-es5.js"></script>
 
 	<script>
+		const { pinki } = window;
+
 		pinki.message.publish('aaa.bbb.ccc', 'pubA1');
 
 		pinki.message.subscribe('aaa', (topic, data) => {
@@ -108,6 +106,9 @@
 
 
 	</script -->
+
+</head>
+<body>
 
 </body>
 </html>
